change path main.sh

--- a/Readme
+++ b/Readme
@@ -2,7 +2,7 @@
 // It's a serie of scripts to perform actions on VmwareLabManager© server
 //
 
-- Change in main.sh: 
+- Change in src/main.sh: 
 
   	 export SERVER_LAB_MANAGER="https://[host]/LabManager/SOAP/LabManager.asmx"
 
